fix(grid): remove extra space on rows display container

--- a/src/core/styles/components/grid/_grid-component.scss
+++ b/src/core/styles/components/grid/_grid-component.scss
@@ -27,6 +27,11 @@
 
     @include e(tr) {
         @extend %grid-row !optional;
+
+        igx-display-container {
+            width: 100%;
+            overflow: hidden;
+        }
     }
 
     @include e(tr, $m: selected) {
